Allow app to be built for portlets
- Upgrade Mojarra to 2.3
- Add links to other views

--- a/src/main/webapp/dynamic.xhtml
+++ b/src/main/webapp/dynamic.xhtml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml"
 	  xmlns:h="http://java.sun.com/jsf/html"
-	  xmlns:f="http://xmlns.jcp.org/jsf/core">
+	  xmlns:f="http://xmlns.jcp.org/jsf/core"
+	  xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 	<h:head />
 	<h:body>
 		<h:outputText value="JSF_IMPL = &quot;#{initParam['JSF_IMPL']}&quot;" />
+		<br />
+		<h:link outcome="/dynamicInclude.xhtml">/dynamicInclude.xhtml</h:link>
 		<br />
 		<h:form>
 			<h:commandButton value="Add Example Component Via Ajax" actionListener="#{bean.addExampleComponentToView}">
