Add navigation example and css resource

--- a/src/main/webapp/staticInclude.xhtml
+++ b/src/main/webapp/staticInclude.xhtml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<html xmlns="http://www.w3.org/1999/xhtml"
+<f:view xmlns="http://www.w3.org/1999/xhtml"
 	  xmlns:h="http://java.sun.com/jsf/html"
-	  xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+	  xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+	  xmlns:f="http://java.sun.com/jsf/core">
 	<h:head />
 	<h:body>
 		<h:outputText value="JSF_IMPL = &quot;#{initParam['JSF_IMPL']}&quot;" />
 		<ui:include id="include" src="includeExample.xhtml" />
 	</h:body>
-</html>
+</f:view>
